--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -1,6 +1,6 @@
 .header {
   position: fixed;
-  top: 0;
+  top: var(--banner-height, 0px);
   left: 0;
   right: 0;
   z-index: 1000;
